Order service (#31)
* initial order service commit

* Order id to from UUID to Long

* Basic test commit

* change in OrderMapper

* Remove unnecessary fields from order request dto and get current user id from security context

* Order tests

* Custom test SecurityContextFactory

* Order persist fix

* Cleanup

---------
