# src/main/resources/api/frontend-services.openapi.yaml
@@ -6,6 +6,58 @@ servers:
   - url: http://localhost:8080/api
     description: development
 paths:
+  /orders:
+    get:
+      summary: List all orders
+      operationId: listOrders
+      tags:
+        - orders
+      responses:
+        '200':
+          description: Whole list of orders
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/OrderResponse"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      summary: Create order
+      operationId: createOrder
+      tags:
+        - orders
+      requestBody:
+        description: Order to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Order'
+      responses:
+        '201':
+          description: Created order
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OrderResponse"
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /warehouses:
     get:
       summary: List all warehouses
@@ -492,18 +544,11 @@ components:
     Order:
       type: object
       required:
-        - id
-        - createdBy
-        - item
+        - itemId
         - quantity
-        - sourceWarehouse
-        - destinationWarehouse
+        - sourceId
+        - destinationId
       properties:
-        id:
-          type: string
-          format: UUID
-        createdBy:
-          type: string
         itemId:
           type: integer
           format: int64
@@ -516,6 +561,47 @@ components:
         destinationId:
           type: integer
           format: int64
+
+    OrderResponse:
+      type: object
+      required:
+        - id
+        - createdBy
+        - createdByName
+        - itemId
+        - itemName
+        - quantity
+        - sourceId
+        - sourceName
+        - destinationId
+        - destinationName
+      properties:
+        id:
+          type: string
+          format: int64
+        createdBy:
+          type: string
+          format: UUID
+        createdByName:
+          type: string
+        itemId:
+          type: integer
+          format: int64
+        itemName:
+          type: string
+        quantity:
+          type: integer
+          format: int64
+        sourceId:
+          type: integer
+          format: int64
+        sourceName:
+          type: string
+        destinationId:
+          type: integer
+          format: int64
+        destinationName:
+          type: string
 
     User:
       type: object
